--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bbb",
-  "version": "0.0.0",
+  "version": "0.0.2",
   "description": "",
   "main": "server.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "license": "BSD-2-Clause",
   "dependencies": {
     "mailparser": "~0.4.1",
-    "levelup": "~0.18.2",
-    "leveldown": "~0.10.2"
+    "speakingurl": "~0.8.4",
+    "dirty": "~0.9.9"
   }
 }
